Remove outdated info

--- a/Community_Updates.mw
+++ b/Community_Updates.mw
@@ -2,29 +2,14 @@ Even though Openmoko strives to keep the community informed of the development p
 
 You may also wish to take a look at the [http://wiki.openmoko.org/wiki/Neo_FreeRunner_(GTA02)_FAQ Neo Freerunner FAQ].
 
-Interested developers may additionally wish to follow the progress on the [http://lists.openmoko.org/pipermail/openmoko-kernel/ openmoko-kernel mailing list].
+Interested developers may additionally wish to follow the progress on the [http://lists.openmoko.org/pipermail/openmoko-kernel/ openmoko-kernel mailing list] and the [http://lists.openmoko.org/pipermail/devel/ devel mailing list] (all mailing lists are available [http://lists.openmoko.org/pipermail/ here]).
 
 You are invited to add questions or topics you think should be included in the Community Updates by emailing community@lists.openmoko.org or by editing section 2 of this wiki page.
 
   FreeRunners are '''shipping now''' in the EU from resellers, and in North America from
   the [http://www.openmoko.com Openmoko store].
 
-The latest Community Update was posted to the community mailing list on [http://lists.openmoko.org/pipermail/community/2008-June/019384.html 14th June, 2008 - When it will be possible to buy OpenMoko?].
-
-'''Steve said''':
- SMT is running. This means printed circuit boards are being produced daily.
- 
- Then, the circuit boards are being assembled into phones. This means the
- plastic casing is being mounted
- As well as other bits and pieces.
- 
- Then the phones are tested. Then they are packed and shipped.
- 
- So figure, assembly is going to start in the week of june 16, pack and ship
- by june 23
- Arrive and clear customs by july 1.
- 
- Hey 4th of july sale! Sorry american bias. But I'd figure early july. 
+Note: as FreeRunners are now shipping, it seems less likely that Community Updates will be posted in the form they used to be (as they mostly related to the expected release dates).
 
 See [[Community_Updates#Previous_Community_Updates | below]] for a list of previous updates.
 
@@ -134,6 +119,7 @@ This is the single most important issue keeping european users (not affected by 
 * [http://lists.openmoko.org/pipermail/community/2008-May/017531.html May 20, 2008 - Whats up with the freerunner mass production?]
 * [http://lists.openmoko.org/pipermail/community/2008-June/018575.html 5th June, 2008 - Cleared to start Mass production]
 * [http://lists.openmoko.org/pipermail/community/2008-June/018887.html 10th June, 2008 - SMT is running!]
+* [http://lists.openmoko.org/pipermail/community/2008-June/019384.html 14th June, 2008 - When it will be possible to buy OpenMoko?]
 
 [[Category:Community]]
 [[Category:Community Update]]
