--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -119,6 +119,10 @@ __NOTOC__
 *[[Repositories]]
 *[[Freerunner Software Status]]
 ====Applications====
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% ; align=top,left|
+<div align=left>
 
 
 =====Om2007.2=====
@@ -152,6 +156,9 @@ __NOTOC__
 * [[Picture Viewer]]
 * [[Openmoko SMS Middleware]]
 * [[Zedlock]]
+</div>
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% ; align=top,left| 
+
 ====Om2008.2====
 <div>
 * [[Splinter|Splinter-GPS Application]]
@@ -162,10 +169,7 @@ __NOTOC__
 * [[Tichy]]
 * [[Om2008.8 Keyboard]]
 * [[Om2008.8 Sudoku]]
-</div>
-
 |}
-
 
 
 ====[[Distributions]]====
