--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -67,6 +67,8 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 | Telit UC86 (Global-version) || AT docs open, ability to program new AT commands, provide python interpreter engine || NA || Waiting for evualation board circuit design || NA
 |-
 |-
+| NXP PN532 (NFC Solution) || No, Waiting for answer || NA || NA || NA
+|-
 | NA || NA || NA || NA || NA
 |-
 |}
