Major cleanup, remove lots of outdated stuff

--- a/Community_Updates.mw
+++ b/Community_Updates.mw
@@ -14,83 +14,28 @@ Note: as FreeRunners are now shipping, it seems less likely that Community Updat
 See [[Community_Updates#Previous_Community_Updates | below]] for a list of previous updates.
 
 
-==Discussion of current issues ==
-<!--- this summary was updated by community members because it was not updated by [[User:Michaelshiloh|Michael Shiloh]]--->
-
-
-
-===GTA02 hardware design and test===
+==Current issues==
 The information below has been collected from various sources, feel free to add questions and comments here.
 
-While writing a device driver for the new battery which provides an accurate counter of the charge state of the [[GTA02]], the driver developer discovered that the device driver does not get a reading of the charge state due to a very long response time with only one I/O signal when trying to read the charge state. To be able to read the battery status properly, it has been written that it will be necessary to re-design that part of the GTA02 for hardware version GTA02A5 to use two I/O signals to reduce the response time (one for transmitting commands, one for receiving data?). [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=957#c1 Bug 957] may have more information.
-
-12/06/2007 - GTA02a5 is a minor variation from GTA02a4, so it shouldn't take very long. We are waiting for confirmation of Wifi and a few other parts of the GTA02a4 hardware before we manufacture even a small test run of GTA02a5.
-
-01/30/2008 - A small number of GTA02A5 have been made and are now being tested. Since much of the hardware is being verified by kernel and driver code, an excellent place to monitor this is on the openmoko-kernel mailing list.
-
-03/18/2008 - The Freerunner design is currently staged to go through Production 
-Validation Test (PVT). The hardware design A5 is, we believe, solid. We are updating this design to A6 to maximize production yields.
-
-The purpose of PVT is to make sure the yield is high enough, and to make sure the manufacturing and testing process is smooth and efficient.
-
-===gllin GPS driver for GTA01===
-11/29/2007 - Thanks to a tremendous amount of hard work by many people, we have ready
-a release of gllin, the GPS driver. Instructions at [http://lists.openmoko.org/pipermail/community/2007-November/011916.html] or grab the ipk directly from [http://3rdparty.downloads.openmoko.org/gllin/].
-
-===850 MHz band not supported in USA+Canada (e.g. comment 24 on bug #256)===
-
-The GSM chip set is capable of quad band operation but the circuit implemented in GTA02 only supports 3 bands. Currently GTA02 supports only 900/1800/1900MHz.
-
-11/29/2007 - We would like to offer an 850/1800/1900MHz version of GTA02 for areas that need it. We are looking into whether this is feasible or not. This requires a number of changes (components, firwmare, calibration, etc.) and so is uncertain until we test it.
-
-12/09/2007 - Since the GSM section is essentially the same between GTA01 and GTA02, we thought a good experiment would be to modify a couple GTA01 handsets for 850MHz and to test them out here in the USA. 
-
-12/20/2007 - Due to the enthusiastic response I received to my request for testing volunteers I've asked our hardware group to modify a few more phones. I don't know when, or even if, they will be able to do this. Meanwhile, I'll be sending out the units I have to the testers, along with a simple test plan. 
-
-We have no intention of manufacturing 850MHz GTA01s, nor can we modify user's phones this way. We modified a couple of units ONLY so that we could test the circuit that we might use in GTA02. When the experiment is done, these modified units must be returned to OpenMoko. 
-
-Conversion of GTA02 to quad band would require major changes and so will not happen.
-
-===Delivery of a GSM firmware update for the 3G SIM bug ([http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=666 #666])===
-Background:
-
-A bug in the GSM firmware prevents some USA 3G SIM cards from working properly. The bug has been fixed, but since the GSM module is under extremely tight legal protection, it is not clear whether or how we can allow customers to perform this upgrade themselves.
-
-12/09/2007 - We've been informed that everything legal has been agreed upon by all parties regarding the process that would allow you to upgrade your own GSM firmware. All that remains is to get everything signed. Apparently the process of getting things signed takes a few weeks!
-
-12/20/2007 - Meanwhile, we have resolved the difficulties I was having performing the upgrade, and I am now able to upgrade your handsets. Anyone interested in having me do this should contact me at michael@openmoko.org.
-
-==Questions or Topics you think are missing==
-
 ===GPS Performance of the Freerunner===
-
 The poor GPS performance on the Freerunner has been traced to an
 interaction between the microSD card and the GPS unit. A software
 and a hardware fixes are available, see [[GPS Problems]].
 
-===Touch screen & the screen itself===
-What about talking with the touch screen? There doesn't seem to be any kind of proximity sensor to feel the presence of ear + cheek to disable the touch screen, so error presses can be an issue. I feel the need to both be able to talk with the phone on my ear and still be able to use the programs while calling so simply disabling touch screen while talking can't be a possibility. I've heard multiple possibilities to remedy this with shaking the phone to enable/disable touch screen and et cetera, but none of them have been easy enough for everyday use. It '''has''' to work seamlessly.
+===GTA02 battery status===
+While writing a device driver for the new battery which provides an accurate counter of the charge state of the [[GTA02]], the driver developer discovered that the device driver does not get a reading of the charge state due to a very long response time with only one I/O signal when trying to read the charge state. To be able to read the battery status properly, it has been written that it will be necessary to re-design that part of the GTA02 for hardware version GTA02A5 to use two I/O signals to reduce the response time (one for transmitting commands, one for receiving data?). This was fixed two months ago (see [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=957#c1 Bug 957]).
 
-Also, some of the photos I've seen of the device have shown a significant amount of glare in the screen. Will the screen be usable at all outdoors in sunny weather? There should be an anti-glare & anti-scratch coating on the screen. The useability of the screen ''especially when it's the only UI for using the device'' is fundamental and IMO its importance goes beyond almost all other features. If one can't see what's on the screen for half of the time and has to cover it with hands or go into shade in order to be able to use the phone, what good is it? Has anyone made a study on the screen yet?
-http://wiki.openmoko.org/wiki/Neo_FreeRunner_GTA02_Hardware#Display
+===Delivery of a GSM firmware update for the 3G SIM bug ([http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=666 #666])===
+
+A bug in the GSM firmware prevents some USA 3G SIM cards from working properly. The bug has been fixed, but the GSM module is under extremely tight legal protection. We've been informed that everything legal has been agreed upon by all parties regarding the process that would allow you to upgrade your own GSM firmware. All that remains is to get everything signed. Apparently the process of getting things signed takes a few weeks! Meanwhile, we have resolved the difficulties I was having performing the upgrade, and I am now able to upgrade your handsets. Anyone interested in having me do this should contact me at michael@openmoko.org.
 
 === SMedia 3362 Documentation & OpenGL ES Drivers ===
 There is an open source kdrive driver being written for the GTA02 which will use hardware to accelerate the XRender extension. While the chip is capable of 3D graphics, no OpenGL ES driver/library is avaliable and OpenMoko developers will not be writing one in the near future (although they have not ruled it out in the long-term). 
 
 Documentation for the SMedia 3362 has been promised ([http://lists.openmoko.org/pipermail/community/2007-September/010175.html see this post]). However, this refers to documentation OpenMoko developers will be writing themselves, not the technical documentation SMedia have provided OpenMoko with. The OpenMoko developers had to sign an NDA with SMedia to obtain this documentation and are therefore unable to pass this information on to community developers. (See [http://lists.openmoko.org/pipermail/community/2007-November/011349.html this post] for details)
 
-=== Power Management on the Neo1973===
-It is still not clear if it will be possible to have "reasonable" battery life on the Neo1973 (GTA1) hardware or if there are hardware problems that make  this impossible.([http://lists.openmoko.org/pipermail/community/2008-January/012456.html  see this post]). Can this be officially clarified?
-
-Further questions and comments regarding this by a GTA01 Neo owner:
-
-This is the single most important issue keeping european users (not affected by the 850MHz issues) from using the neo as a regular phone. After reading in various places (IRC, Lists, this Wiki), it seems like this issue divides into several ones and a more detailed answer would be helpful for each:
-
-* if it's a bug in the firmware failing to trigger an IRQ, is at least the kernel sufficiently prepared to wake up?
-* there are rumours that a wrong resistor value on the GTA01 board yields a very high quiescient current for the GSM in suspend mode. Is there any further information on this (what's the battery life in proper suspend with and without this fix) and maybe a short document describing a fix available? Is it doable at home (replacing a 0402 surely counts as doable!)
-* what is the status of failed resumes after a suspend?
-
-'''Another''' vote for power management, Neo is practically useless with all the configurability and features if it needs to be plugged on a charger every day. I'm expecting more from Neo in terms of power management and battery life time than from for example E90 which is packed with many hw and sw features. I hope the hardware is re-checked so that these kind of errors in the design (unreasonably high currents etc) get worked out.
+=== Power Management on the Neo1973/Freerunner===
+The current battery life of the Neo1973 and Freerunner is not satisfactory. A lot of changes seem to be necessary to the kernel, drivers and related user-space applications. Hopefully the situation will improve over time.
 
 ==Previous Community Updates==
 *[[September 28, 2007 Community Update]]
