*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -96,7 +96,11 @@ __NOTOC__
 *[[HXD8]]
 *[[Neo1973: GTA01Bv4 versus GTA02 comparison]]
 |}
+
 ==Software==
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50%" align=left |  
 
 ===U-boot===
 *[[U-boot|Bootloader]]
@@ -106,6 +110,21 @@ __NOTOC__
 *[[Bootloader versions]]
 *[[NetBSD]]
 *[[Neo1973:GTA01:Kernel]]
+
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50%" align=left | 
+
+===Linux Core Service===
+* [[Gsmd]]
+*[[Alarm daemon]]
+*[[Qpegps]]
+*[[D-Bus]]
+*[[Dbus device API]]
+*[[Opkg]]
+*[[QEMU command line]]
+
+|}
+
+
 
 ===Openmoko Application Guideline===
 *[[Openmoko Community Applications]]
@@ -199,14 +218,7 @@ __NOTOC__
 *[[Openmoko-debugtool]]
 *[[Libopkg]]
 
-===Linux Core Service===
-* [[Gsmd]]
-*[[Alarm daemon]]
-*[[Qpegps]]
-*[[D-Bus]]
-*[[Dbus device API]]
-*[[Opkg]]
-*[[QEMU command line]]
+
 ===Bug Report===
 *[[Bug Report]]
 
