*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -124,6 +124,22 @@ __NOTOC__
 
 |}
 
+===Application development tool===
+* [[Toolchain]]
+*[[OpenEmbedded]]
+*[[Java]]
+*[[Development with Eclipse]]
+*[[Dfu-util]]
+*[[Mono]]
+*[[PyFeedRead]]
+*[[Pexpect]]
+*[[Python]]
+*[[OpenOCD]]
+*[[SMSTool]]
+*[[BitBake]]
+*[[PulseAudio]]
+*[[Openmoko-debugtool]]
+*[[Libopkg]]
 
 
 ===Openmoko Application Guideline===
@@ -137,6 +153,14 @@ __NOTOC__
 *[[Latest Images]]
 *[[Repositories]]
 *[[Freerunner Software Status]]
+
+====Application Guideline====
+*[[Minimo|Building Minimo web browser ]]
+*[[Devirginator]]
+*[[File transfer]]
+*[[Getting GPS console output with gllin]]
+*[[Getting Started with your Neo FreeRunner]]
+
 ====Applications====
 =====Om2007.2=====
 * [[Gutenflash]]
@@ -191,32 +215,16 @@ __NOTOC__
 *[[Om2008.8 Keyboard]]
 
 =====FSO=====
-*[[GPRS FSO]]
-*[[FSO ringtones]]
+* [[GPRS FSO]]
+* [[FSO ringtones]]
+* [[OpenmokoFramework|FSO info]]
+* [[Zhone]]
+* [[Building FSO|Build FSO]]
+* [[FSO_UI_Tutorial|UI explanation]]
+* [[GPRS FSO|GPRS]]
+* [[FSO ringtones|Ringtones]]
 
-====Application Guideline====
-*[[Minimo|Building Minimo web browser ]]
-*[[Devirginator]]
-*[[File transfer]]
-*[[Getting GPS console output with gllin]]
-*[[Getting Started with your Neo FreeRunner]]
 
-===Application development tool===
-* [[Toolchain]]
-*[[OpenEmbedded]]
-*[[Java]]
-*[[Development with Eclipse]]
-*[[Dfu-util]]
-*[[Mono]]
-*[[PyFeedRead]]
-*[[Pexpect]]
-*[[Python]]
-*[[OpenOCD]]
-*[[SMSTool]]
-*[[BitBake]]
-*[[PulseAudio]]
-*[[Openmoko-debugtool]]
-*[[Libopkg]]
 
 
 ===Bug Report===
