--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1763,7 +1763,7 @@ Due to common customs problems we created google group to discuss how to get tha
 | 
 |-
 | 21. [[Special:Emailuser/Anarchist|Anarchist]]
-|
+| Anarchist
 | 1 (P5.3)
 |
 | 1 (P5.3)
