*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -123,8 +123,13 @@ __NOTOC__
 *[[QEMU command line]]
 
 |}
+==Application==
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
 
 ===Application development tool===
+<br>
 * [[Toolchain]]
 *[[OpenEmbedded]]
 *[[Java]]
@@ -140,9 +145,8 @@ __NOTOC__
 *[[PulseAudio]]
 *[[Openmoko-debugtool]]
 *[[Libopkg]]
-
-
 ===Openmoko Application Guideline===
+<br>
 *[[Openmoko Community Applications]]
 *[[Openmoko Core Applications]]
 *[[Applications]]
@@ -153,15 +157,21 @@ __NOTOC__
 *[[Latest Images]]
 *[[Repositories]]
 *[[Freerunner Software Status]]
-
 ====Application Guideline====
+<br>
 *[[Minimo|Building Minimo web browser ]]
 *[[Devirginator]]
 *[[File transfer]]
 *[[Getting GPS console output with gllin]]
 *[[Getting Started with your Neo FreeRunner]]
-
-====Applications====
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
+====Om2008.2====
+* [[Splinter|Splinter-GPS Application]]
+* [[Navit|Navit -GPS Application]]
+* [[Lint-wifi|Lint-Wifi:Wifi Networking tool]]
+* [[Mofi|Mofi:Networking tool]]
+* [[HP48 Series RPN Calculator]]
+* [[Tichy]]
 =====Om2007.2=====
 * [[Gutenflash]]
 * [[Calendar]]
@@ -193,15 +203,7 @@ __NOTOC__
 * [[Picture Viewer]]
 * [[Openmoko SMS Middleware]]
 * [[Zedlock]]
-====Om2008.2====
-* [[Splinter|Splinter-GPS Application]]
-* [[Navit|Navit -GPS Application]]
-* [[Lint-wifi|Lint-Wifi:Wifi Networking tool]]
-* [[Mofi|Mofi:Networking tool]]
-* [[HP48 Series RPN Calculator]]
-* [[Tichy]]
-* [[Om2008.8 Keyboard]]
-* [[Om2008.8 Sudoku]]
+
 |}
 
 ====[[Distributions]]====
