*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -234,6 +234,9 @@ __NOTOC__
 *[[Bug Report]]
 
 ==UI Design==
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 ===User Interface Guide===
 *[[Application UI Design Recommendations]]
 *[[Common Interface]]
@@ -242,7 +245,7 @@ __NOTOC__
 *[[Artwork]]
 *[[Preferences]]
 * [[Widget Inheritance Graph]]
-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 ===Widget===
 *[[Input Method]]
 *[[Power management menu]]
@@ -252,12 +255,13 @@ __NOTOC__
 *[[UI Improvements]]
 ====FSO UI====
 *[[FSO UI Tutorial]]
+|}
 
 =Test=
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
-== Hardware ==
+=== Hardware ===
 [[GSM 900 RF Test Cases]]<br>
 
 [[DCS 1800 RF Test Cases]]<br>
@@ -268,8 +272,8 @@ __NOTOC__
 
 [[Acoustic Test Cases]]<br>
 
-= Software =
-== Neo FreeRunner ==
+=== Software===
+=== Neo FreeRunner ===
 * [[U-Boot Test Cases]] 
 * [[Dialer Test Cases]]
 * [[Contacts Test Cases]]
