*Empty MediaWiki Message*

--- a/Wishlist%2FExpansion_Back.mw
+++ b/Wishlist%2FExpansion_Back.mw
@@ -12,6 +12,34 @@ An altered back, that is 5mm or so deeper offers many possibilities, without mod
 
 Alternatively, a spacer could be made that fits between the phone and the existing back.  The user could insert as many spacers as desired to obtain sufficient space.  See:  [[Wishlist:ExpansionSpacer]]
 
+Heavy modification in the case:
+This requires may be huge modification. I dont know how feasible it is? 
+Moreover the I have created 3D designs for the first time. So please dont look at the dimensions or curves etc. I have forgot to put the stylus. That anyway was not the driving force for me while doing this.
+
+My idea is to use any  connector that internally uses USB. Ofcouse the connector will need to be standardized (may be some existing standard can do).
+The device can be given to the consumer with a dummy module fitted that just gives the mini-usb  But possibilities are limitless 
+   -- removable camera -- user may buy the type of camera he wants from several modules
+   -- extra SD card stack
+   -- may be extra battery
+   -- special purpose radios
+   -- mini projector
+   -- projection keyboard
+   -- HDD
+   -- finger print scanner
+   -- smartcard reader
+   -- Wi-Max or any other future tech
+
+here are a few images that i exported from google sketchup (I used the free version, I had tried blender. Its great software but takes time to learn. So for the time being I went to sketchup. 
+
+[[Image:mokonew1.png]]
+[[Image:mokonew2.png]]
+[[Image:mokonew3.png]]
+[[Image:mokonew4.png]]
+[[Image:connected1.png]]
+[[Image:connected2.png]]
+[[Image:connected3.png]] 
+[[Image:connected4.png]]
+
 
 ===Ideas that do not require any modification of the phone.===
 *'''Larger battery''', perhaps doubling the existing capacity.
