*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -297,6 +297,10 @@ __NOTOC__
 *[[Getting Openmoko working on host with Xephyr]]
 *[[Test_Openmoko Emulation with chroot image]]
 |}
+==Technical==
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
 ==Protocol/Standard==
 *[[IPv4]]
 *[[GSM]]
@@ -307,8 +311,6 @@ __NOTOC__
 *[[PLMN]]
 *[[Bluetooth]]
 *[[GPS]]
-
-==Technical==
 ====Hardware Documentation====
 *[[Hardware:AT Commands]]
 *[[Connecting Neo1973 with Debug Board v2]]
@@ -318,7 +320,6 @@ __NOTOC__
 *[[Accelerometer data retrieval]]
 *[[NAND bad blocks]]
 *[[Boot from sd card]]
-
 ====Software Documentation====
 *[[Simyo pppd scripts]]
 *[[Vibrator]]
@@ -343,6 +344,8 @@ __NOTOC__
 *[[SettingsGUI]]
 *[[Automatic emulation in Ubuntu]]
 *[[Boot sound]]
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left|  
+
 *[[Building Gadget USB Module]]
 *[[Forcing fast charge mode]]
 *[[CheckFastCharge-script]]
@@ -379,11 +382,11 @@ __NOTOC__
 *[[GPS Sight]]
 *[[Distributions]]
 *[[Available Packages]]
-
 *[[Switching Keyboards]]
-
 ====Training Programs====
 *[[Regular Training Programs]]
+|}
+
 
 ==Community & Users==
 ===Wiki Editing===
