*Empty MediaWiki Message*

--- a/Wishlist%2FExpansion_Back.mw
+++ b/Wishlist%2FExpansion_Back.mw
@@ -31,14 +31,14 @@ The device can be given to the consumer with a dummy module fitted that just giv
 
 here are a few images that i exported from google sketchup (I used the free version, I had tried blender. Its great software but takes time to learn. So for the time being I went to sketchup. 
 
-[[Image:mokonew1.png]]
-[[Image:mokonew2.png]]
-[[Image:mokonew3.png]]
-[[Image:mokonew4.png]]
-[[Image:connected1.png]]
-[[Image:connected2.png]]
-[[Image:connected3.png]] 
-[[Image:connected4.png]]
+[[Image:Mynew1.png]]
+[[Image:Mynew2.png]]
+[[Image:Mynew3.png]]
+[[Image:Mynew4.png]]
+[[Image:Connected1.png]]
+[[Image:Connected2.png]]
+[[Image:Connected3.png]] 
+[[Image:Connected4.png]]
 
 
 ===Ideas that do not require any modification of the phone.===
