*Empty MediaWiki Message*

--- a/Wishlist%2FExpansion_Back.mw
+++ b/Wishlist%2FExpansion_Back.mw
@@ -29,15 +29,26 @@ The device can be given to the consumer with a dummy module fitted that just giv
    -- smartcard reader
    -- Wi-Max or any other future tech
 
-here are a few images that i exported from google sketchup (I used the free version, I had tried blender. Its great software but takes time to learn. So for the time being I went to sketchup. 
+I exported some images to png format from google sketchup (I used the free version, I had tried blender. Its great software but takes time to learn. So for the time being I went to sketchup.)
+
+Here are some showing possible extensions and connector slot:
 
 [[Image:Mynew1.png]]
+
 [[Image:Mynew2.png]]
+
 [[Image:Mynew3.png]]
+
 [[Image:Mynew4.png]]
+
+In the following images the camera module has been connected to the Phone:
+
 [[Image:Connected1.png]]
+
 [[Image:Connected2.png]]
+
 [[Image:Connected3.png]] 
+
 [[Image:Connected4.png]]
 
 
