--- a/Wishlist%2FExpansion_Back.mw
+++ b/Wishlist%2FExpansion_Back.mw
@@ -31,7 +31,8 @@ The device can be given to the consumer with a dummy module fitted that just giv
 
 I exported some images to png format from google sketchup (I used the free version, I had tried blender. Its great software but takes time to learn. So for the time being I went to sketchup.)
 
-Here are some showing possible extensions and connector slot:
+Here are some showing possible extensions and connector slot.
+The one that looks like a floppy disk is supposed to be a 1.8" HDD.
 
 [[Image:Mynew1.png]]
 
