*Empty MediaWiki Message*

--- a/Wishlist%2FExpansion_Back.mw
+++ b/Wishlist%2FExpansion_Back.mw
@@ -33,7 +33,7 @@ I exported some images to png format from google sketchup (I used the free versi
 
 Here are some showing possible extensions and connector slot.
 The one that looks like a floppy disk is supposed to be a 1.8" HDD.
-And all the modules has a outgoing mini USB port. Its shown in only one of them not all.
+And all the modules has a outgoing mini USB port. Its shown in only one of them not all. I request you once again, please don't pay any heed to the dimensions. I had used them to keep everything proportionate. But couldn't remove them later on as they had become embedded in other objects.
 
 [[Image:Mynew1.png]]
 
