*Empty MediaWiki Message*

--- a/Wishlist%2FExpansion_Back.mw
+++ b/Wishlist%2FExpansion_Back.mw
@@ -12,7 +12,7 @@ An altered back, that is 5mm or so deeper offers many possibilities, without mod
 
 Alternatively, a spacer could be made that fits between the phone and the existing back.  The user could insert as many spacers as desired to obtain sufficient space.  See:  [[Wishlist:ExpansionSpacer]]
 
-Heavy modification in the case:
+===This idea requires heavy modification:===
 This requires may be huge modification. I dont know how feasible it is? 
 Moreover the I have created 3D designs for the first time. So please dont look at the dimensions or curves etc. I have forgot to put the stylus. That anyway was not the driving force for me while doing this.
 
