--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -61,11 +61,13 @@ See [[Neo FreeRunner (GTA02) Battery#Notes_about_expected_battery_life]] and mor
 === USB ===
 '''Q:''' How do I connect an USB memory-stick etc?
 
-'''A:''' ''(please complete this)'' This requires an adapter Mini-B 5-pole => Type A jack. ''Are there any ready-to-use adapters? What's the cabling?''
+'''A:''' This requires an adapter Mini-B 5-pole => Type A jack or an adapter jack => jack. [http://wiki.openmoko.org/wiki/Host_Mode see here]
 
 '''Q:''' Once I have such an adapter, can I use it to connect 2 Neo to each other?
 
 '''A:''' This question is equivalent to '''How to connect two [Unix/Linux] computers via USB cable and what sort of special cable is needed?''' -> http://www.linuxquestions.org/questions/linux-general-1/connecting-two-computers-with-a-usb-cable-data-cable-411073
+<br >
+It should work if one Neo is set to Host mode and the other one set to Device mode. One Neo could give power to the USB-port it the other Neo's battery is low. ''(I have to verify this)''
 
 === GSM ===
 
