*Empty MediaWiki Message*

--- a/Debian.mw
+++ b/Debian.mw
@@ -1,1 +1,5 @@
-#REDIRECT [[Manual Debian]]
+== Debian on the FreeRunner ===
+
+There are official instructions on how to install Debian on http://wiki.debian.org/DebianOnFreeRunner
+
+Previous, partly now outdated information on how to install Debian manually has been moved to [[Manual Debian]].
