/* Debian on the FreeRunner = */

--- a/Debian.mw
+++ b/Debian.mw
@@ -1,5 +1,5 @@
-== Debian on the FreeRunner ===
+== Debian on the FreeRunner ==
 
-There are official instructions on how to install Debian on http://wiki.debian.org/DebianOnFreeRunner
+There are official instructions on how to install Debian on http://wiki.debian.org/DebianOnFreeRunner, and the [http://lists.linuxtogo.org/pipermail/smartphones-standards/2008-August/000232.html announcement].
 
 Previous, partly now outdated information on how to install Debian manually has been moved to [[Manual Debian]].
