/* Interessenten der Gruppe */

--- a/Openmoko_Local_Groups:_Munich.mw
+++ b/Openmoko_Local_Groups:_Munich.mw
@@ -139,6 +139,17 @@ Interessenten können sich hier eintragen. Wenns Interesse gibt, dann treffen wi
 |
 |GTA02v5
 |noch nicht
+|-
+|[[Special:Emailuser/rema|rema]]
+|Linux User (seicht)
+|
+* telefonieren
+* GPS für Open Street Map (TangoGPS)
+* Musik hören
+|Ackermannbogen
+|
+|GTA02v5
+|nö
 |}
 
 ====Stammtisch und sonstige Treffen====
