--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -66,6 +66,8 @@ Note that most vendors are using an irritating way of labeling the capacity of t
 |-
 | Transcend || MM4GRO1GUACY || 1GB || || ? || {{yes}} || ?
 |-
+| Transcend || TS4GUSDHC6 (card marked with MM8GR04GUACY) || 4GB || Class 6 || ? || {{yes}} (Some work needed to get it running, see [https://docs.openmoko.org/trac/ticket/1743 #1743]) || ?
+|-
 | Verbatim || 47225 || 1GB || || {{no}} || {{yes}} || {{yes}}
 |-
 | vox-fon || 1 GB || 1GB || || {{no}} || {{yes}} ||
