/* Cards by Vendor */

--- a/Supported_microSD_cards.mw
+++ b/Supported_microSD_cards.mw
@@ -66,7 +66,7 @@ Note that most vendors are using an irritating way of labeling the capacity of t
 |-
 | Transcend || MM4GRO1GUACY || 1GB || || ? || {{yes}} || ?
 |-
-| Transcend || TS4GUSDHC6 (card marked with MM8GR04GUACY) || 4GB || Class 6 || ? || {{yes}} (Some work needed to get it running, see [https://docs.openmoko.org/trac/ticket/1743 #1743]) || ?
+| Transcend || TS4GUSDHC6 (card marked with MM8GR04GUACY) || 4GB (SDHC) || Class 6 || ? || {{yes}} (Some work needed to get it running, see [https://docs.openmoko.org/trac/ticket/1743 #1743]) || ?
 |-
 | Verbatim || 47225 || 1GB || || {{no}} || {{yes}} || {{yes}}
 |-
