--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -103,5 +103,6 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 ** See also [http://www.eetimes.com/showArticle.jhtml;jsessionid=3EVLVGY31FQQCQSNDLOSKH0CJUNN2JVN?articleID=209000014 this teardown] which was published in EEtimes (not in-house)
 * [http://downloads.openmoko.org/foresight/Publications/Reveal_ETEN_Glofiish_X650.pdf Reveal ETEN Glofiish X650 ]
 * [http://downloads.openmoko.org/foresight/Publications/Reveal_Gsmart_MS800.pdf Reveal Gsmart MS800 ]
+*[[Kuai_Yi_Dian_GM519|Electronic Dictionary: Kuai Yi Dian GM519]]
 '''Test Report'''
 [[Category:Openmoko]]
