--- a/Neo_1973_GPS.mw
+++ b/Neo_1973_GPS.mw
@@ -1,11 +1,11 @@
-The [[Neo 1973]] device contains an integrated ''GPS''. The particular device is marketed as Assisted GPS ('AGPS'). Performance requirements are defined in GSM/GPRS 3GPP TS 25.171, CDMA 3GPP2 C.S0036-0. There is some [[Hardware:AGPS | discussion]] available as to what significance that "A" might have.
+The smartphones contain an integrated ''GPS'' receiver. The devices used are marketed as Assisted GPS ('AGPS'). Performance requirements are defined in GSM/GPRS 3GPP TS 25.171, CDMA 3GPP2 C.S0036-0. There is some [[Hardware:AGPS | discussion]] available as to what significance that "A" might have.
 
-The external antenna for the GPS is using a [http://en.wikipedia.org/wiki/MMCX MMCX] connector.  More information about external antennas on the [[GPS antennas for neo1973|GPS antennas page]]. The connector for the internal GPS antenna is also using a MMCX connector. This GPS connector is located on the side of Freerunner.
+The external antenna for the GPS uses an [http://en.wikipedia.org/wiki/MMCX MMCX] connector.  More information about external antennas on the [[GPS antennas for neo1973|GPS antennas page]]. The connector for the internal GPS antenna also uses an MMCX connector. The external connector is located on the side of Freerunner.
 
-Note that the [[GTA02 GPS]] device contains the [[u-blox ANTARIS 4 ATR0635]].
+The two current models (Neo 1973 and Neo Freerunner) use different GPS chipsets.
+The Neo Freerunner [[GTA02 GPS]] device contains the [[u-blox ANTARIS 4 ATR0635]].
 
-A critical problem with early (current) GTA02s are interferences with the SD card, which results in a long connection time (10min+) to get first GPS data. See [[GPS Problems | this page]] for more discussion and suggested fixes.
-
+A critical problem with early (current) GTA02s is that accesssing the SD card generates RF noise, which causes very long TTFF (time to first fix) (10min+ or longer). See [[GPS Problems | this page]] for more discussion and suggested fixes. Using an external antenna is one.
 
 === GTA01 GPS driver (gllin) ===
 ''Main article - [[gllin]]''
@@ -51,10 +51,10 @@ One with a fix:
 
 --[[User:Speedevil|Speedevil]] 11:52, 7 April 2008 (CEST)
 
-If you are having GPS problems with your freerunner, please document these on the page [[GPS Problems]].
-[[FreeRunner_GPS_antenna_repair_SOP]] documents a possible solution.
+If you are having GPS problems with your Freerunner, please document them on the page [[GPS Problems]].
+[[FreeRunner GPS antenna repair SOP]] documents a possible solution.
 
-In Openmoko projects, you could find a GPS test program that could provide graphical and text dump of GPS information. See [[Howto Test Your GPS with agpsui]]. This project called [http://svn.projects.openmoko.org/svnroot/openmoko-agpsui Openmoko AGPS UI project].
+In Openmoko projects, you will find a GPS test program that provides graphical and text dump of GPS information. See [[Howto Test Your GPS with agpsui]]. The project is called [http://svn.projects.openmoko.org/svnroot/openmoko-agpsui Openmoko AGPS UI project].
 
 === Possible GPS programs ===
 
@@ -84,20 +84,23 @@ Here are some ideas for possibilities:
 
 == Using the Neo's GPS on a Laptop ==
 
-First be sure you have gllin installed on the Neo.
+This procedure depends upon being able to set up a network connection between your Neo and your laptop. The connection can be over either WiFi or USB cable.
 
-*On host type: '''nc -vvn -l -p 5000 > /tmp/nmeaNP''' (Host starts listening on port 5000 for GPS-signals and sends them to /tmp/nmeaNP)
-*On the Neo type:   '''nc 192.168.0.200 5000 < /dev/ttySAC1''' (Signals from device will be send to port 5000 on host.) If your host is connected to the neo via wifi, change the IP address in the command to the one of the host. 
-*On the host PC install GPSD, your GPS is attached as /tmp/nmeaNP 
-*start gpsd on host with: '''gpsd -p /tmp/nmeaNP'''
-*run your application! I used gpsdrive and it works better than my stand-alone GPS. 
-*Tested with RoadNav. Works great!
+First be sure you have gllin and gpsd installed on the Neo. Some Neo Freerunner images don't have them, they use a different GPS stack called gypsy. 
 
-With this in mind if you have an unlimited data package you could export this over the internet. the possibilities are limitless.
+# On host type: '''nc -vvn -l -p 5000 > /tmp/nmeaNP''' (Host starts listening on port 5000 for GPS-signals and sends them to /tmp/nmeaNP)
+# On the Neo type:   '''nc 192.168.0.200 5000 < /dev/ttySAC1''' (Signals from device will be send to port 5000 on host.) If your host is connected to the neo via wifi, change the IP address in the command to the one of the host. 
+# On the host PC install GPSD, your GPS is attached as /tmp/nmeaNP 
+# start gpsd on host with: '''gpsd -p /tmp/nmeaNP'''
+# run your application! I used gpsdrive and it works better than my stand-alone GPS. 
+
+Tested with RoadNav. Works great!
+
+If you have an unlimited [[GPRS]] data package you could make your gpsd service accessible over the Internet. This opens up many possibilities. For example, you could implemented AVL (Automatic Vehicle Location) by having a web server somewhere query your gpsd server for your position and write it to a KML file which would then display your location on a Google map.
 
 == Bluetooth GPS relay ==
 
-To make your neo appear like a regular bluetooth GPS:
+To make your Neo appear like a regular Bluetooth GPS:
 
 === GTA01 ===
 *Power up the bluetooth radio
@@ -112,6 +115,5 @@ To make your neo appear like a regular bluetooth GPS:
 *run '''rfcomm -r watch 0 1 sh -c "gpspipe -r >/dev/rfcomm0" &'''
 
 [[Category:GPS]]
-
 [[category:Documentation]]
 [[category:Standard]]
